--- a/rpl.html
+++ b/rpl.html
@@ -7,5 +7,6 @@ index.html
 <body>
 <h1>membuat salinan github dimesin lokal<h1>
 <h3>perintah: git clone<i>url</i></h3>
+<h3>perintah: git config</h3>
 </body>
 </html>
